main.css
:root {
  --background-color:#191820;
  --footer-color:rgba(0, 0, 0, 0.133);
  --accent-color:#ae8bf8;
  --heading-color:#fff;
  --text-color:#98989A;
  --border-color:#32313d;
  --box-shadow-bottom-color:rgba(0, 0, 0, 0.35);
  --box-shadow-top-color:rgba(159, 159, 159, 0.1);
  --link-color:#bababa;
  --logo:brightness(0) invert(0.9);
  --white-color:#fff;
  --avatar-shadow:
  0 2px 4px rgba(0, 0, 0, 0.75),
  0 -1px 2px rgba(255, 255, 255, 0.05),
  0 0 0 1px rgba(255, 255, 255, 0.04);
  --filter_hrom:100%;
  --circle:#8e8e8e;
}

html[data-theme=dark] {
  --footer-color:rgba(161, 161, 161, 0.133);
  --accent-color:#ae8bf8;
  --background-color:#ececec;
  --heading-color:#191820;
  --text-color:#191820;
  --border-color:#dcdcdc;
  --link-color:#2c2c2c;
  --box-shadow-bottom-color:rgba(169, 169, 169, 0.35);
  --box-shadow-top-color:rgba(151, 151, 151, 0.1);
  --logo:brightness(1) invert(0);
  --white-color:#fff;
  --avatar-shadow:
  4px 4px 10px rgba(0, 0, 0, 0.14),
  -3px -3px 8px rgba(255, 255, 255, 0.9),
  0 0 0 1px rgba(0, 0, 0, 0.04);
  --filter_hrom:0%;
  --circle:#bababa;
}

@font-face {
  font-family: "Inter";
  src: url("./fonts/Inter-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
html {
  scroll-behavior: smooth;
}

@font-face {
  font-family: "Inter";
  src: url("./fonts/Inter-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: var(--background-color);
  font-family: "Inter", Arial, sans-serif;
  color: var(--text-color);
}

.preloader {
  position: fixed;
  inset: 0;
  z-index: 9999;
  display: flex;
  pointer-events: none;
}
.preloader__side {
  width: 50%;
  height: 100%;
  display: flex;
  flex-direction: column;
}
.preloader__part {
  width: 100%;
  height: 50%;
  background-color: var(--accent-color);
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
}
.preloader__part--left {
  animation-name: slide-left;
}
.preloader__part--left--first {
  animation-duration: 1s;
  animation-delay: 0.2s;
}
.preloader__part--left--second {
  animation-duration: 1.2s;
  animation-delay: 0.3s;
}
.preloader__part--right {
  animation-name: slide-right;
}
.preloader__part--right--first {
  animation-duration: 1s;
  animation-delay: 0.2s;
}
.preloader__part--right--second {
  animation-duration: 1.2s;
  animation-delay: 0.3s;
}

@keyframes slide-left {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}
@keyframes slide-right {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(100%);
  }
}
h1, h2, h3, h4, h5, p {
  margin: 0;
}

a {
  text-decoration: none;
  color: var(--link-color);
}

li {
  list-style: none;
}

.container,
.wrapper {
  max-width: 1440px;
  width: 100%;
  margin: 0 auto;
  padding: 0 20px;
}

.logo_part {
  filter: var(--logo);
  width: clamp(40px, 3vw, 60px);
  height: clamp(30px, 3vw, 50px);
}

.header_container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header {
  position: sticky;
  padding: 0px 20px;
  margin-bottom: 80px;
  top: 0;
  z-index: 1000;
  padding-top: 10px;
  background-color: var(--background-color);
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.header .topic_part {
  width: clamp(34px, 4vw, 40px);
  height: clamp(34px, 4vw, 40px);
  border: none;
  border-radius: 50%;
  background: transparent;
  padding: 10px;
  cursor: pointer;
  transition: 0.4s;
}
.header .topic_part img {
  width: 100%;
  height: 100%;
  display: block;
  position: relative;
  z-index: 2;
}
.header .topic--white {
  filter: brightness(0) invert(1);
}
.header .topic--black {
  filter: brightness(1) invert(0);
  background-color: white;
}
.header .topic--first {
  transform: translateX(5px);
  transition: 0.3s;
}
.header .header_list {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.header .header_list .header_link {
  font-size: clamp(14px, 2vw, 18px);
  font-weight: 500;
  line-height: 1.5;
  padding: 14px 24px;
  transition: 0.3s ease;
  color: var(--link-color);
}
.header .header_list .header_link:hover {
  color: var(--accent-color);
  transition: 0.3s ease;
}
.header .swich_topic {
  position: relative;
  display: flex;
  align-items: center;
  gap: 6px;
  padding: 5px;
  border-radius: 999px;
  overflow: hidden;
  display: flex;
  align-items: center;
  gap: 10px;
  border-radius: 15px;
  border: 1.5px solid var(--border-color);
  padding: 2px 5px;
  box-shadow: inset 12px 12px 24px var(--box-shadow-color), inset -10px -10px 22px rgba(255, 255, 255, 0.04), 18px 18px 35px rgba(0, 0, 0, 0.35), -8px -8px 25px rgba(255, 255, 255, 0.03);
  transition: 0.5s ease;
}
.header .swich_topic:hover {
  transition: 0.5s ease;
  border-color: var(--accent-color);
}
.header .swich_topic__bg {
  position: absolute;
  top: 5px;
  left: 5px;
  width: clamp(34px, 4vw, 40px);
  height: clamp(34px, 4vw, 40px);
  border-radius: 50%;
  background-color: white;
  z-index: 1;
  transition: transform 0.45s cubic-bezier(0.34, 1.56, 0.64, 1);
}
.header .header_mobile_menu {
  display: none;
}
.header .header_mobile_menu button {
  display: flex;
  align-items: center;
  gap: 10px;
  border-radius: 15px;
  border: 1.5px solid var(--border-color);
  padding: 2px 5px;
  box-shadow: inset 12px 12px 24px var(--box-shadow-color), inset -10px -10px 22px rgba(255, 255, 255, 0.04), 18px 18px 35px rgba(0, 0, 0, 0.35), -8px -8px 25px rgba(255, 255, 255, 0.03);
  transition: 0.5s ease;
}
.header .header_mobile_menu button:hover {
  transition: 0.5s ease;
  border-color: var(--accent-color);
}
.header .header_mobile_menu button {
  background: none;
}
.header .header_mobile_menu button:hover {
  cursor: pointer;
}
.header .header_mobile_menu img {
  filter: var(--logo);
  max-width: 30px;
}
/* ... */

